# Lundao

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/docs/: Prompt-P1.md  Prompt-P2.md  Prompt-P3.md  Prompt-P4.md
backend/examples/2410.05779v3/: 2410.05779v3.md  2410.05779v3_meta.json
backend/ref/: agents.md  api-reference.md  architecture.md  development.md  gamma-api.md  index.md
backend/src/agents/: base.py  prompt_p1.py  prompt_p2.py  prompt_p3.py  prompt_p4.py
backend/src/api/: errors.py  main.py  routes.py  schemas.py
backend/src/cli/: main.py
backend/src/core/: config.py  state.py  workflow.py
backend/src/db/: __init__.py  connection.py  repositories.py  schema.sql
backend/src/services/: analysis_service.py  arxiv_service.py  gamma_client.py  gemini_client.py  image_server.py  ppt_service.py  task_queue.py  task_runner.py  upload_service.py
backend/src/utils/: file_handler.py  logger.py  prompts.py
docs/: ARCHITECTURE.md  PRODUCT.md  api-design.md
frontend/: .dockerignore  .env.development  .env.production  .gitignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/Docs/: BluePrint.md  PRD.md  ppt-task-mock-design.md
(+97 files in other folders)
