[project]
name = "lundao-backend"
version = "0.2.0"
description = "Academic paper presentation automation using LangGraph and Gemini"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Lundao Project Contributors" }]
dependencies = [
    # LangChain ecosystem (v1.x stable, no breaking changes until v2)
    "langgraph>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-google-genai>=4.0,<5.0",
    # Web frameworks
    "fastapi>=0.118",
    "uvicorn[standard]>=0.46.0",
    "typer[all]>=0.15",
    # Data validation and settings
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    # Utilities
    "loguru>=0.7",
    "aiohttp>=3.11",
    "python-multipart>=0.0.17",
    "pillow>=11.0",
    "httpx>=0.28",
    "aiosqlite>=0.22.1",
]

[project.scripts]
lundao = "src.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "black>=25.0",
    "ruff>=0.9",
    "mypy>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
